# ASC-ODE-team08

./: .gitignore  CMakeLists.txt
demos/: demo_legendre.cpp  pendulum_ad_test.cpp  plotRCcircuit.py  plot_legendre.py  test_explicit_rk.cpp  test_ode.cpp  test_pendulum.cpp
docs/: ASC-ODE-exercises.ipynb  _config.yml  _toc.yml  documentation.md  ex20.md  exercise19.md  intro.md
docs/.ipynb_checkpoints/: ASC-ODE-exercises-checkpoint.ipynb
mechsystem/: mass_spring.hpp  mass_spring.ipynb
src/: autodiff.hpp  pendulum.hpp  timestepper.hpp
